@startuml
package Chirp {

    package Chirp.Core {
        interface IAuthorRepository {
            {method} FindAuthorsByName
            {method} FindAuthorsByEmail
            {method} CreateAuthor
            
        }
        interface ICheepRepository {
            {method} StoreCheep
            {method} StoreCheeps
            {method} QueryCheeps
            {method} QueryCheepCount
        }
        class Author
        {
            AuthorId
            Name
            Email
            Cheeps
        }
        
        class Cheep
        {
            CheepId
            AuthorId
            Author
            Text
            TimeStamp
            {method}GetSerializedTimeStamp
            {method}ToString
        }
        Author o-- IAuthorRepository
        Cheep o-- ICheepRepository
    }

    package Chirp.Infrastructure {
        class AuthorRepository {
        }
        
        class CheepRepository {
        }
        
        class ChirpDBContext{
            Cheeps
            Authors
        }

        IAuthorRepository <|.. AuthorRepository
        ICheepRepository <|.. CheepRepository
        AuthorRepository --> ChirpDBContext
        CheepRepository --> ChirpDBContext
    }

    package Chirp.Web {
        
        class TimelineModel {
            {method} OnPostAsync
            {method} OnGet
        }
        
        class AuthModel {
            {method} OnGet
        }
        
        class ResetTablesModel{
            {method} OnPost
        }
        
        entity _Layout{}
        
        TimelineModel -up-> ICheepRepository
        TimelineModel -up-> IAuthorRepository
        TimelineModel -up-> ChirpDBContext
        _Layout --* AuthModel
        _Layout --* ResetTablesModel
        
    }
}
@enduml
